Bonus/flagger/version/version-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-version-db
  namespace: flagger
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: back
      app: mysql-version-db
  minReadySeconds: 10
#  strategy:
#    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-version-db
        role: db
        tier: back
    spec:
      containers:
      - image: moazrefat/jenkins-docker-labs:version-db-latest
        name: mysql-version-db
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
          protocol: TCP
