Bonus/flagger/version/version-setup-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: version-v2
  namespace: flagger
  labels:
    app: version
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: version
      # version: v2
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: version
        version: v2
    spec:
      containers:
      - name: version
        image:  moazrefat/app:version-v2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "100m"
            memory: "150Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - containerPort: 8080
