Bonus/flagger/version/version-setup-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: version-v3
  namespace: flagger
  labels:
    app: version
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: version
      # version: v3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: version
        version: v3
    spec:
      containers:
      - name: version
        image:  moazrefat/app:version-v3
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "100m"
            memory: "150Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - containerPort: 8080
