Bonus/flagger/version/version-vs.yaml
åapiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: version-vs
  namespace: flagger
spec:
  hosts:
  - "version-svc"
  http:
  - match:
    - uri:
        exact: /version
    - uri:
        exact: /health
    route:
     - destination:
          host: version-svc
          subnet: v1
  - route:
    - destination:
        host: version-svc
        subset: v1
      weight: 80
    - destination:
        host: version-svc
        subset: v2
      weight: 10
    - destination:
        host: version-svc
        subset: v3
      weight: 10
